--- a/style.css
+++ b/style.css
@@ -1,17 +1,63 @@
-label {
-    display: block;
-    width: 400px;
-    height: 400px;
+body {
+    background:
+        linear-gradient(45deg, #bbb 25%, transparent 25%, transparent 75%, #bbb 75%) 0px 0px / 20px 20px fixed,
+        linear-gradient(45deg, #bbb 25%, transparent 25%, transparent 75%, #bbb 75%) 10px 10px / 20px 20px fixed,
+        linear-gradient(45deg, #888, #aaa) fixed;
+    text-align: center;
+    font-family: monospace;
 }
 
-input[type='file'] {
-    display: none;
+#input {
+    border: 3px double black;
+    padding: 5px;
 }
 
-.flex {
-    display: flex;
+.grid {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    max-width: max-content;
+    display: grid;
+    grid-template-areas:
+        'r0l r0 r1 r1l'
+        'g0l g0 g1 g1l'
+        'b0l b0 b1 b1l'
+        'a0l a0 a1 a1l'
+        'iml im im _';
+    grid-gap: 5px;
+    grid-template-columns: auto 1fr 1fr auto;
+    padding: 5px;
+    image-rendering: crisp-edges;
+    image-rendering: pixelated;
 }
 
-.flex > div {
-    flex: 1
+.grid > div {
+    display: grid;
+}
+
+#im {grid-area: im;}
+#r0 {grid-area: r0;}
+#g0 {grid-area: g0;}
+#b0 {grid-area: b0;}
+#a0 {grid-area: a0;}
+#r1 {grid-area: r1;}
+#g1 {grid-area: g1;}
+#b1 {grid-area: b1;}
+#a1 {grid-area: a1;}
+#iml {grid-area: iml;}
+#r0l {grid-area: r0l;}
+#g0l {grid-area: g0l;}
+#b0l {grid-area: b0l;}
+#a0l {grid-area: a0l;}
+#r1l {grid-area: r1l;}
+#g1l {grid-area: g1l;}
+#b1l {grid-area: b1l;}
+#a1l {grid-area: a1l;}
+
+.grid img {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    min-width: 200px;
+    max-width: 100%;
 }
