--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ body {
     max-width: max-content;
     display: grid;
     grid-template-areas:
-        'r0l r0 r1 r1l'
-        'g0l g0 g1 g1l'
-        'b0l b0 b1 b1l'
-        'a0l a0 a1 a1l'
-        'iml im im _';
+        'rl r gb gbl'
+        'gl g rb rbl'
+        'bl b rg rgl'
+        'al a rgb rgbl'
+        'rgbal rgba rgba _';
     grid-gap: 5px;
     grid-template-columns: auto 1fr 1fr auto;
     padding: 5px;
@@ -35,24 +35,24 @@ body {
     display: grid;
 }
 
-#im {grid-area: im;}
-#r0 {grid-area: r0;}
-#g0 {grid-area: g0;}
-#b0 {grid-area: b0;}
-#a0 {grid-area: a0;}
-#r1 {grid-area: r1;}
-#g1 {grid-area: g1;}
-#b1 {grid-area: b1;}
-#a1 {grid-area: a1;}
-#iml {grid-area: iml;}
-#r0l {grid-area: r0l;}
-#g0l {grid-area: g0l;}
-#b0l {grid-area: b0l;}
-#a0l {grid-area: a0l;}
-#r1l {grid-area: r1l;}
-#g1l {grid-area: g1l;}
-#b1l {grid-area: b1l;}
-#a1l {grid-area: a1l;}
+#r {grid-area: r;}
+#g {grid-area: g;}
+#b {grid-area: b;}
+#a {grid-area: a;}
+#gb {grid-area: gb;}
+#rb {grid-area: rb;}
+#rg {grid-area: rg;}
+#rgb {grid-area: rgb;}
+#rgba {grid-area: rgba;}
+#rl {grid-area: rl;}
+#gl {grid-area: gl;}
+#bl {grid-area: bl;}
+#al {grid-area: al;}
+#gbl {grid-area: gbl;}
+#rbl {grid-area: rbl;}
+#rgl {grid-area: rgl;}
+#rgbl {grid-area: rgbl;}
+#rgbal {grid-area: rgbal;}
 
 .grid img {
     position: relative;
